Установка связи между Задачи и пользователями
