# openapi/openapi.yaml
@@ -35,6 +35,25 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/RequestBodyTask'
+  /tasks/{user_id}:
+    get:
+      summary: Getting tasks from a specific user.
+      tags: [ tasks ]
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: A list of user's tasks
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/RequestBodyTask'
   /tasks/{id}:
     patch:
       summary: Update a task
@@ -78,16 +97,7 @@ components:
       properties:
         id:
           type: integer
-          format: int64
         task:
           type: string
-    Users:
-      type: object
-      properties:
-        id:
+        user_id:
           type: integer
-          format: int64
-        email:
-          type: string
-        password:
-          type: string
